[package]
name = "pixel2svg"
authors = ["FluffyBucketSnake"]
version = "1.0.1"
edition = "2021"
license = "GPL-3.0"
description = "Based on the original pixel2svg, but rewritten in Rust. Converts pixel art to SVG - pixel by pixel."

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = "4.5.4"
clap_derive = "4.5.4"
image = "0.25.1"
svg = "0.17.0"
